# NexusShield

./: Cargo.toml  LICENSE  README.md  WORK_STATE.md  launch-ticker.sh
.github/workflows/: release.yml
assets/: logo_header.b64
docs/: API_REFERENCE.md  THREAT_PATTERNS.md
src/: audit_chain.rs  auth.rs  compliance_report.rs  config.rs  credential_vault.rs  daily_report.rs  email_guard.rs  ferrum_integration.rs  fingerprint.rs  journal.rs  lib.rs  metrics.rs  nexuspulse_integration.rs  quarantine.rs  rate_governor.rs  sanitizer.rs  siem_export.rs  signature_updater.rs  sql_firewall.rs  sse_events.rs  ssrf_guard.rs  threat_score.rs  webhook.rs
src/endpoint/: allowlist.rs  container_scanner.rs  dns_filter.rs  file_quarantine.rs  fim.rs  heuristics.rs  memory_scanner.rs  mod.rs  network_monitor.rs  process_monitor.rs  rootkit_detector.rs  runtime_allowlist.rs  signatures.rs  supply_chain.rs  threat_intel.rs  usb_monitor.rs  watcher.rs  yara_engine.rs
src/ui/: security_ticker.rs
widget/: index.html
